// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders a closed dropdown 1`] = `
<body>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      class="css-b0z14z"
      role="combobox"
    >
      <div>
        <button
          aria-haspopup="true"
          aria-label="open menu"
          class="css-1m1ecn3"
          data-toggle="true"
          role="button"
          type="button"
        >
          Dropdown trigger
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Dropdown renders a dropdown with a max height 1`] = `
<body>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-2-label"
      class="css-b0z14z"
      role="combobox"
    >
      <div>
        <button
          aria-haspopup="true"
          aria-label="open menu"
          class="css-1m1ecn3"
          data-toggle="true"
          role="button"
          type="button"
        >
          Dropdown trigger
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Dropdown renders an open dropdown 1`] = `
<body>
  <div>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-1-label"
      aria-owns="downshift-1-menu"
      class="css-b0z14z"
      role="combobox"
    >
      <div>
        <button
          aria-haspopup="true"
          aria-label="close menu"
          class="css-1m1ecn3"
          data-toggle="true"
          role="button"
          type="button"
        >
          Dropdown trigger
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      style="z-index: 2; position: absolute; left: 0px; top: 0px;"
    >
      <div
        aria-labelledby="downshift-1-label"
        class="css-1uapjdz"
        data-cy="popover"
        id="downshift-1-menu"
        role="listbox"
      >
        <div
          class=""
        >
          <div
            aria-selected="false"
            class="css-1uile0g"
            data-cy="PopoverListItem"
            id="downshift-1-item-0"
            role="option"
          >
            Edit
          </div>
          <div
            aria-selected="false"
            class="css-1j6n8hw"
            data-cy="PopoverListItem"
            id="downshift-1-item-1"
            role="option"
          >
            Scale
          </div>
          <div
            aria-selected="false"
            class="css-1j6n8hw"
            data-cy="PopoverListItem"
            id="downshift-1-item-2"
            role="option"
          >
            Restart
          </div>
          <div
            aria-selected="false"
            class="css-35mrzw"
            data-cy="PopoverListItem"
            id="downshift-1-item-3"
            role="option"
          >
            Stop
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Dropdown renders an open dropdown with multiple sections 1`] = `
<body>
  <div>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-3-label"
      aria-owns="downshift-3-menu"
      class="css-b0z14z"
      role="combobox"
    >
      <div>
        <button
          aria-haspopup="true"
          aria-label="close menu"
          class="css-1m1ecn3"
          data-toggle="true"
          role="button"
          type="button"
        >
          Dropdown trigger
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      style="z-index: 2; position: absolute; left: 0px; top: 0px;"
    >
      <div
        aria-labelledby="downshift-3-label"
        class="css-1uapjdz"
        data-cy="popover"
        id="downshift-3-menu"
        role="listbox"
      >
        <div
          class=""
        >
          <div
            aria-selected="false"
            class="css-1uile0g"
            data-cy="PopoverListItem"
            id="downshift-3-item-0"
            role="option"
          >
            Edit
          </div>
          <div
            aria-selected="false"
            class="css-35mrzw"
            data-cy="PopoverListItem"
            id="downshift-3-item-1"
            role="option"
          >
            Scale
          </div>
        </div>
        <div
          class="css-fqgy4m"
        >
          <div
            aria-selected="false"
            class="css-1uile0g"
            data-cy="PopoverListItem"
            id="downshift-3-item-2"
            role="option"
          >
            Restart
          </div>
          <div
            aria-selected="false"
            class="css-35mrzw"
            data-cy="PopoverListItem"
            id="downshift-3-item-3"
            role="option"
          >
            Restart Delay
          </div>
        </div>
        <div
          class="css-fqgy4m"
        >
          <div
            aria-selected="false"
            class="css-1uile0g"
            data-cy="PopoverListItem"
            id="downshift-3-item-4"
            role="option"
          >
            Pause
          </div>
          <div
            aria-selected="false"
            class="css-35mrzw"
            data-cy="PopoverListItem"
            id="downshift-3-item-5"
            role="option"
          >
            Stop
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
